cleanup properties search bar - text-shadow for readability - cover image - fix responsiveness

--- a/ui/css/properties/properties.css
+++ b/ui/css/properties/properties.css
@@ -7,60 +7,73 @@
 
 /** SEARCH - start **/
 .properties-base > .search-wrapper {
+    position: relative;
     border-radius: 0.6vw;
 }
 
 .properties-base > .search-wrapper > img {
     border-radius: 0.6vw;
-    position: relative;
-    text-align: center;
-
+    max-height: 12vw;
     width: 100%;
-    height: 12vw;
+    object-fit: cover;
 }
 
 .properties-base > .search-wrapper > .search-data {
     position: absolute;
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    place-content: center;
 
-    top: 13%;
-    left: 41%;
 
-    z-index: 99999;
+    width: 100%;
+    height: 100%;
+
+    z-index: 1;
     text-align: center;
 
     font-weight: 600;
-    font-size: 0.9vw;
+    font-size: 2.5rem;
+
+    top: 0%
+}
+
+.properties-base > .search-wrapper > .search-data > p {
+    text-shadow: 2px 2px 2px #000;
 }
 
 .properties-base > .search-wrapper > .search-data > .light-text {
-    font-size: 0.7vw;
+    font-size: 1.6rem;
 }
 
 .properties-base > .search-wrapper > .search-data > .search-bar {
+    display: flex;
     position: relative;
-    margin-top: 0.7vw;
+    margin-top: 1rem;
+    align-items: center;
+
+    background-color: #fff;
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
+    border-radius: 0.15vw;
+    padding: 0 1rem;
+    gap: 0.5rem;
 }
 
 .properties-base > .search-wrapper > .search-data > .search-bar > input {
-    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.1);
-
-    border-radius: 0.15vw;
     width: 25vw;
+    height: 3.2rem;
 
-    padding: 0.2vw 0.5vw;
     font-weight: 500;
     font-size: 0.6vw;
     color: rgba(0, 0, 0, 1);
+    background: none;
+    border: none;
 }
 
 .properties-base > .search-wrapper > .search-data > .search-bar > i {
-    position: absolute;
-
     color: rgba(0, 0, 0, 0.6);
-    left: 95%;
-    font-size: 0.6vw;
-
-    padding: 0.4vw 0.2vw;
+    
+    font-size: 0.8vw;
 }
 /** SEARCH - end **/
 
